# pH7Console

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  LICENSE.md  PRIVACY.md  PROJECT_SUMMARY.md  README.md  index.html  package.json  playwright.config.ts  scripts.json  setup.sh  tailwind.config.js  vitest.config.ts
e2e/: global-setup.ts  global-teardown.ts  terminal-workflow.spec.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ai_data/: learning_data.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src-tauri/icons/: create_icon.py
src-tauri/src/ai/: agent.rs  enhanced_context.rs  learning_engine.rs  mod.rs
src-tauri/src/models/: embeddings.rs  llm_inference.rs  local_llm.rs  mod.rs
src-tauri/src/terminal/: mod.rs
src/ai/: IntelligentPredictionEngine.test.ts  IntelligentPredictionEngine.ts  IntelligentPredictionEngine.validation.test.ts
src/components/: AIPanel.tsx  AgentPanel.tsx  FeedbackPanel.tsx  FileExplorer.tsx  HistoryModal.tsx  Settings.tsx  Sidebar.tsx  SmartSuggestions.tsx  Terminal.tsx  TerminalHeader.tsx
src/components/__tests__/: Terminal.test.tsx
src/hooks/: useClickOutside.ts
src/store/: aiStore.ts  settingsStore.ts  terminalStore.ts
tests/: setup-vitest.ts  setup.ts
tests/e2e/: ai-features.spec.ts  command-validation.spec.ts  suggestion-validation.spec.ts  terminal-basic.spec.ts
tests/fixtures/: AppFixture.ts
